Update Front End Project.html
i did some changes approve it

--- a/Front End Project.html
+++ b/Front End Project.html
@@ -4,11 +4,12 @@
         <title> SOMKUWAR</title>
     </head>
     <body bgcolor = red>
+        //heading 
         <h1>Welcome to the blogger space</h1>
         <p> 
-            This is the content
+            This is the content! Really this is.
         </p>
-        
+        <button>no reason button</button>
 
     </body>
 </html>
